# rl-s25

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup_precommit.sh
data/: email.json  single_number.json  word.json
report/: main.tex  references.bib
src/: a2c.py  dataset.py  enviroment.ipynb  enviromentV2.ipynb  environment.py  environmentV2.py  environment_metrics.py  plot.py  reinforce.py  rl.py  rpn.ipynb  rpn.py  test.ipynb  utils.py
src/notebooks/: a2c.ipynb  a2c_email.ipynb  a2c_number.ipynb  a2c_word.ipynb  dqn.ipynb  enviroment.ipynb  enviromentV2.ipynb  enviromentV3.ipynb  generate_dataset.ipynb  reinforce.ipynb  reinforce2.ipynb  reinforce3.ipynb  reinforce_email.ipynb  reinforce_number.ipynb  reinforce_word.ipynb  rpn.ipynb
